           - change types related to index in stream to OPJ_OFF_T, thus resolving to a 64 bit signed integer
           - change types related to size of stream to OPJ_UINT64_T
           - change calls to fseek/ftell to LFS-capable OPJ_SEEK/OPJ_TELL
* [mickael] fix error about the way to detect the additional test suite

November 29, 2011
* [mickael] fix error with new way to detect kdu_expand

November 27, 2011
* [jmalik] clean up redundant includes already handled in opj_includes.h
* [jmalik] reverted changeset 1091 (see issue #103)

November 24, 2011
* [jmalik] support seeking in files larger than 2 GB

November 21, 2011
* [mickael] WIP: fix bug with windows platform and j2k_dump

November 18, 2011
* [mickael] WIP: fix bug with windows platform and j2k_to_image

November 17, 2011
* [mickael] WIP: fix bug when decoding an area or a tile with special resolution
+ [mickael] WIP: enhance j2k_to_image with new get_decoded_tile functionality
+ [mickael] WIP: clean j2k_dump and enhance j2k_dump with commit 1052.
+ [mickael] WIP: add a set decoded resolution factor function and update j2k_to_image help about decoded region.

November 9, 2011
* [mickael] WIP: fix tests/nonregresion/CMakeList.txt

November 9, 2011
* [mickael] WIP: fix get_decoded_tile function to avoid error with output image
* [mickael] fix bug with mj2 applications (credit to winfried)
+ [mickael] enhance mj2 when read jp2h (credit to winfried)
+ [mickael] check if the file extension is the same as the infile format (credit to winfried)
+ [jmalik] add some sanity check in CMakeLists to prevent STRING(REGEX..) call issues

November 8, 2011
+ [mickael] WIP: add get_decoded_tile functionality
+ [mickael] WIP: clean and enhance j2K file
+ [mickael] WIP: clean and enhance openjpeg.c
+ [mickael] WIP: clean and enhance openjpeg.h and add deprecated macro

October 25, 2011